Backport ac1941425bdb1a25aa3364eef9eb1092ee716761 Fix compile error on 17